apis/poi/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: poi-gateway
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: poi
spec:
  hosts:
  - "*"
  gateways:
  - poi-gateway
  http:
  - match:
    - uri:
        exact: /api/healthcheck/poi
    route:
    - destination:
        host: poi-service-prod
        port:
          number: 80
